--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board =  esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder, colorize
 lib_deps =
     adafruit/Adafruit INA228 Library@^2.0.1
 	NimBLE-Arduino
