--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board =  esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, colorize
+build_flags =
+	-DCORE_DEBUG_LEVEL=3
 lib_deps =
     adafruit/Adafruit INA228 Library@^2.0.1
 	NimBLE-Arduino
